# kushnezeu

./: .gitignore  README.md  docker-compose-dev.yml  docker-compose.yml
backend/: .env  Cargo-deps.toml  Cargo.toml  Dockerfile  Dockerfile-dev  debug.sh  wait-for-postgres.sh
backend/migrations/2021-01-17-222645_create_users/: down.sql  up.sql
backend/migrations/2021-01-23-172731_new-token/: up.sql
backend/migrations/2021-01-26-191935_content-tables/: down.sql  up.sql
backend/src/: admin.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs
frontend/: Dockerfile  nginx.conf
frontend/html/: account.js  content.html  content.js  cookie.js  index.html  index.js  login.html  login.js  template.css
