[package]
name = "backend"
version = "0.1.0"
authors = ["DankusMemusXXX <14098249+tincaMatei@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.15.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"

